# GoodbyeNetworkSec

./: README.md
1/: dns1.py  dns2.py  dns3.py  udp.c
2/: .gitignore  CMakeLists.txt  tlsclient.c  tlsserver.c  vpnclient.c  vpnserver.c
